Group objects disappear after appending #43337

Closed
opened 2015-01-21 04:14:26 +01:00 by Karja Krähwald · 8 comments

System Information
Windows 7 64, GTX 980

Blender Version
Broken: 2.6 (unsure), 2.70 - b4d8fb5 (2.73 release), a1f4821

Short description of error
Group objects who are used as a Custom Bone Shape 2 or more times
will disappear after appending their group to a new file, regardless of any other usage.

Exact steps for others to reproduce the error
GroupAppendBug.blend

Steps:

  • Add a Cube.

  • Add an Armature.

    • Create 2 Bones.
    • Use Cube as Custom Bone Shape for both Bones.
  • Assign all objects to a Group.

  • Open a new file and append this Group

Problem: Cube (object) isnt appended correctly and dont show up in your new file - only mesh data is appended.

All objects that have used Cube for any purpose (mirror-target/constraints/etc) will now refer to a hidden object.
And of course Cubes individual settings like constraints or modifiers are lost as well.

**System Information** Windows 7 64, GTX 980 **Blender Version** Broken: 2.6 (unsure), 2.70 - b4d8fb5 (2.73 release), a1f4821 **Short description of error** Group objects who are used as a Custom Bone Shape 2 or more times will disappear after appending their group to a new file, regardless of any other usage. **Exact steps for others to reproduce the error** [GroupAppendBug.blend](https://archive.blender.org/developer/F138503/GroupAppendBug.blend) >Steps: - Add a Cube. - Add an Armature. - Create 2 Bones. - Use Cube as Custom Bone Shape for both Bones. - Assign all objects to a Group. - Open a new file and append this Group >Problem: Cube (object) isnt appended correctly and dont show up in your new file - only mesh data is appended. All objects that have used Cube for any purpose (mirror-target/constraints/etc) will now refer to a hidden object. And of course Cubes individual settings like constraints or modifiers are lost as well.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja
Campbell Barton was assigned by Lukas Tönne 2015-01-21 11:24:31 +01:00
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Problem seems to be this conditional when creating bases for appended objects in give_base_to_objects :

				...
				else if (idcode==ID_GR) {
					if (ob->id.us == 1 && is_link == false && ob->id.lib == lib) {
						if ((ob->flag & OB_FROMGROUP) && object_in_any_scene(mainvar, ob)==0) {
							do_it = true;
						}
					}
				}
				...

When there is only one bone shape the ob->id.us == 1 part is true and the Suzanne object gets a base, but with 2 bone shapes it fails and no other condition succeeds to give it a base.

Problem seems to be this conditional when creating bases for appended objects in [give_base_to_objects ](https://developer.blender.org/diffusion/B/browse/master/source/blender/blenloader/intern/readfile.c;47bf0934f5743d14024ef693b2bfe4510c2c666a$9017): ``` ... else if (idcode==ID_GR) { if (ob->id.us == 1 && is_link == false && ob->id.lib == lib) { if ((ob->flag & OB_FROMGROUP) && object_in_any_scene(mainvar, ob)==0) { do_it = true; } } } ... ``` When there is only one bone shape the `ob->id.us == 1` part is true and the Suzanne object gets a base, but with 2 bone shapes it fails and no other condition succeeds to give it a base.

Looks like it could be changed to: ob->id.us >= 1. would be a reasonable fix.

Looks like it could be changed to: `ob->id.us >= 1`. would be a reasonable fix.

This issue was referenced by ec18021867

This issue was referenced by ec180218678be5704d31532fff8c20d2356b8f02

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ec18021867.

Closed by commit ec18021867.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43337
No description provided.