Fix T43337: Group object disappear after append

Relying on user-count of 1 wasn't reliable because of custom-bones.